chore: 分离内部版差异代码到独立文件 (merge request !897)
Squash merge branch 'bcc/v1.4.2-inner-ver' into 'bcc/v1.4.x'
chore: 分离内部版差异代码到独立文件

--story=117179183 插件化改造-后端代码

TAPD: --story=117179183

--- a/docs/support-file/changelog/ch/v1.4.0-oa-2024-03-05.md
+++ b/docs/support-file/changelog/ch/v1.4.0-oa-2024-03-05.md
@@ -1,8 +1,11 @@
-**V1.4.0 版本更新日志**
+**V1.4.0 内部版更新日志**
 
 # 新增
 
 
+- [新增] 以独立厂商"腾讯自研云"的形式接入自研账号，目前支持安全组、参数模板功能
+- [新增] 自研云支持BPaas单据查看，单据添加source字段区分ITSM单据和BPaas单据
+- [新增] 自研云-安全组，从CMDB直接拉取主机列表进行绑定
 - [新增] 腾讯云-安全组模板，支持IP地址，IP地址组，端口，端口组模板
 - [新增] 腾讯云-安全组-规则，支持添加添加模板
 - [新增] 账号列表-支持搜索结果高亮, 云厂商支持选中
