--- a/docs/support-file/changelog/ch/v1.6.8_2024-10-09.md
+++ b/docs/support-file/changelog/ch/v1.6.8_2024-10-09.md
@@ -5,13 +5,13 @@
 - [新增] 增加关闭账单拉取的配置项
 - [新增] 支持对CLB删除结果轮询
 - [新增] 支持创建超过500个rs的监听器
-
+- [新增] 自研云主机申请-增加滚服项目类型
 
 # 优化
 - [优化] 重构账单月度任务，支持多个类型月度任务
 - [优化] “业务访问”权限默认不再与“资源分配”权限关联
 - [优化] 调整消息通知和版本日志默认配置
-
+- [优化] 业务-单据管理-主机回收,业务字段显示
 
 # 修复
 
