--- a/docs/support-file/changelog/en/v1.6.8_2024-10-09.md
+++ b/docs/support-file/changelog/en/v1.6.8_2024-10-09.md
@@ -5,11 +5,13 @@
 - [Feature] Support for Credit allocation functionality in GCP bills
 - [Feature] Support for polling the result of CLB deletion 
 - [Feature] Support for creating more than 500 RS listeners
+- [Feature] Self-developed cloud host application-Add rolling service project types
 
 # Upgrade
 - [Upgrade] Refactor month task, support multiple type month task
 - [Upgrade] "Access Biz" permission is no longer associated with  "Assign Resource To Business" permission by default
 - [Upgrade] Update message notification and version log default configuration
+- [Upgrade] Business-Doc Management-Host Recovery, business fields display
 
 # Bugfix
 
