--- a/docs/support-file/changelog/en/v1.6.11_2024-11-04.md
+++ b/docs/support-file/changelog/en/v1.6.11_2024-11-04.md
@@ -2,12 +2,14 @@
 
 # Feature
 - [Feature] Rolling service project-business-support application, recovery of associated quotas and rolling service usage records
-- [Feature]  Rolling service project-platform management-support quota management and rolling service accounting
+- [Feature] Rolling service project-platform management-support quota management and rolling service accounting
 - [Feature] Rolling service item-Host application-Due to Tencent Cloud interface limitations, the maximum number of hosts for the demand sub-order is 10
 - [Feature] Resource forecast-application document-comment fields support copying
 - [Feature] Security Group - List Data - Synchronize tags, creation, and update times
 - [Feature] Security Group - Tencent Cloud - Support for rule sorting functionality
 - [Feature] Account Entry - Support for AWS China site entry, removal of case sensitivity check
+- [Feature] Ticket Management - Resource forecast - approval process display approval node
+- [Feature] Host Application - add application guidelines
 
 # Upgrade
 - [Upgrade] Account Management - Improved handling of empty bills during bill retrieval
@@ -15,3 +17,4 @@
 
 # Bugfix
 - [Bugfix] Resource Access - Unable to select an account after switching resources
+- [Bugfix] Self Developed Cloud Host - batch check and uncheck for incorrect data issue
