docs: 更新v1.7.0.2版本日志及Helm Chart版本信息 (merge request !1814)
Squash merge branch 'bcc/v1.7.0.2-changelog' into 'bcc/v1.7.x'
docs: 更新v1.7.0版本日志及Helm Chart版本信息

- 更新了v1.7.0版本日志，包括新增功能和修复问题
- 更新了Helm Chart的版本号和appVersion

--- a/docs/support-file/changelog/ch/v1.7.0_2024-11-25.md
+++ b/docs/support-file/changelog/ch/v1.7.0_2024-11-25.md
@@ -5,6 +5,10 @@
 - [新增] 平台管理，新增“小额绿通”管理
 - [新增] 主机申请，去掉“故障替换”和“短租项目”项目类型，需求类型默认置空
 - [新增] 资源预测，单据的审批流程-done状态下不展示剩余节点
+- [新增] 主机申请-滚服项目-固资号校验增加明确的报错信息
+- [新增] 主机申请-单据详情-ITSM单据流程展示优化
+- [新增] 主机申请-生产详情-展示CRP的审批流程，未交付前支持撤单功能
+- [新增] 账号管理-增加华为云服务费分摊功能
 
 # 修复
 
