--- a/docs/support-file/changelog/en/v1.7.0_2024-11-25.md
+++ b/docs/support-file/changelog/en/v1.7.0_2024-11-25.md
@@ -1,6 +1,11 @@
 **Version 1.7.0 Release Notes**
 
 # Feature
+
+- [Feature] Host Application - Rolling Server Project - Fixed Asset Number Verification Adds Clear Error Information
+- [Feature] Host Application - Document Details - ITSM Document Process Display Optimization
+- [Feature] Host Application - Production Details - Display CRP Approval Process, Support Cancellation Before Delivery
+- [Feature] Account Management - Add Huawei Cloud Service Fee Apportionment Function
 - [Feature] Host application, add "Small Amount Green Channel" project type
 - [Feature] Platform management, add "Small Amount Green Channel" management
 - [Feature] Host application, remove "Fault Replacement" and "Short-term Rental Project" project types, the requirement type defaults to empty
