docs: v1.7.0.10 (merge request !1866)
Squash merge branch 'docs-v1.7.0.10' into 'bcc/v1.7.x'
docs: v1.7.0.10

--- a/docs/support-file/changelog/en/v1.7.0_2024-11-25.md
+++ b/docs/support-file/changelog/en/v1.7.0_2024-11-25.md
@@ -2,6 +2,9 @@
 
 # Feature
 
+- [Feature] Host application - Added device family validation for rolling service type
+- [Feature] Optimized synchronization of cloud host performance
+- [Feature] Host reset - Added MOA verification timeout tip
 - [Feature] Host Application - Rolling Server Project - Fixed Asset Number Verification Adds Clear Error Information
 - [Feature] Host Application - Document Details - ITSM Document Process Display Optimization
 - [Feature] Host Application - Production Details - Display CRP Approval Process, Support Cancellation Before Delivery
@@ -13,4 +16,7 @@
 
 # Bugfix
 
+- [Bugfix] Fixed system exception caused by empty data returned by ITSM
+- [Bugfix] Rolled back the logic for judging rolling service recovery quota
+- [Bugfix] Fixed incorrect account ID for out-of-month bills
 - [Bugfix] Resource Access - Security group creation does not automatically load accounts on the left
