--- a/docs/support-file/changelog/ch/v1.7.0_2024-11-25.md
+++ b/docs/support-file/changelog/ch/v1.7.0_2024-11-25.md
@@ -1,6 +1,9 @@
 **V1.7.0 版本更新日志**
 
 # 新增
+- [新增] 主机申请-滚服类型增加机型族校验
+- [新增] 优化同步自研云主机性能
+- [新增] 主机重装-MOA校验增加超时提醒
 - [新增] 主机申请，新增“小额绿通”项目类型
 - [新增] 平台管理，新增“小额绿通”管理
 - [新增] 主机申请，去掉“故障替换”和“短租项目”项目类型，需求类型默认置空
@@ -12,4 +15,7 @@
 
 # 修复
 
+- [修复] 修复ITSM返回数据为空时导致的系统异常
+- [修复] 回滚滚服回收额度判断逻辑
+- [修复] 修复月份外账单账号id错误
 - [修复] 资源接入-安全组新建没有自动加载左侧账号
