--- a/docs/support-file/changelog/ch/v1.7.1_2024-12-10.md
+++ b/docs/support-file/changelog/ch/v1.7.1_2024-12-10.md
@@ -2,16 +2,10 @@
 
 # 新增
 
-- [新增] 腾讯云 负载均衡-详情/列表、安全组-基本信息界面支持展示标签信息
+- [新增] 资源预测管理优化-按照业务维度隔离管理预测数据
+- [新增] 腾讯云安全组-基本信息界面支持展示标签信息
 - [新增] 支持配置同步并发数
 
 # 优化
 - [优化] 新的人员选择器及其展示搜索与表单组件
-- [优化] 修改IAM侧系统名称为"海垒(HCM)"
 - [优化] Helm Chart增加etcd的tls开关等
-
-# 修复
-
-- [修复] 修复CLB列表循环请求问题
-- [修复] 修复月份外账单账号id错误
-
