--- a/docs/support-file/changelog/en/v1.7.1_2024-12-10.md
+++ b/docs/support-file/changelog/en/v1.7.1_2024-12-10.md
@@ -2,13 +2,10 @@
 
 
 # Features
-- [Feature] Tencent Cloud CLB - Details/List, Security Group - Basic Information interface support displaying tag information
+- [Feature] Resource Plan Management Optimization - Isolate and manage plan data according to business dimensions
+- [Feature] Tencent Security Group - Basic Information interface support displaying tag information
 - [Feature] Support configuration of synchronization concurrency
 
 # Upgrade
 - [Upgrade] New personnel selector and its display search and form components
 - [Upgrade] Helm Chart adds ETCD's tls config switch, etc.
-
-# Bugfix
-- [Bugfix] Fix CLB list cyclic request issue
-- [Bugfix] Fix incorrect account id in bills outside the month
