docs: v1.7.1.2-alpha.1 (merge request !1936)
Squash merge branch 'bcc/docs-v1.7.1.2' into 'bcc/v1.7.x'
docs: v1.7.1.2-alpha.1

 



TAPD: --story=121352690

--- a/docs/support-file/changelog/ch/v1.7.1_2024-12-10.md
+++ b/docs/support-file/changelog/ch/v1.7.1_2024-12-10.md
@@ -2,10 +2,29 @@
 
 # 新增
 
+- [新增] 主机申领API-关联资源预测检查
+- [新增] 主机重装失败后恢复主机状态
+- [新增] 机房裁撤对接裁撤系统
+- [新增] 手工交付增加扣操作系统匹配字段
+- [新增] 增加自研云主机详情支持
+- [新增] CVM机型-创建新机型-新增核心类型
 - [新增] 资源预测管理优化-按照业务维度隔离管理预测数据
 - [新增] 腾讯云安全组-基本信息界面支持展示标签信息
 - [新增] 支持配置同步并发数
 
 # 优化
+
+- [优化] 优化滚服回收额度判断逻辑 
+- [优化] 自研云主机操作完善-交互统一：详情、安全组查看、开关机、重启
+- [优化] 资源预测前端交互优化
+- [优化] 滚服额度执行不再限制查询区间
+- [优化] 主机申请计费模式与需求数量优化
+- [优化] 自研云主机回收-业务下只需要预览可回收主机
 - [优化] 新的人员选择器及其展示搜索与表单组件
 - [优化] Helm Chart增加etcd的tls开关等
+
+# 修复
+
+- [修复] 修复主机转移到其他业务出现查询不到主机的时序问题
+- [修复] 主机回收-预检详情-数据显示不正确
+- [修复] 主机申请-参数报错-磁盘类型数据不正确
