--- a/docs/support-file/changelog/en/v1.7.1_2024-12-10.md
+++ b/docs/support-file/changelog/en/v1.7.1_2024-12-10.md
@@ -2,10 +2,31 @@
 
 
 # Features
+
+- [Feature] Host application API - Associated resource prediction check
+- [Feature] Restore host status after host reinstallation failure
+- [Feature] Integration with caiche system for data center retirement
+- [Feature] Add operating system matching field for host manual delivery
+- [Feature] Add support for tcloud-ziyan host details
+- [Feature] Add core type parameter for Create new instance type
 - [Feature] Resource Plan Management Optimization - Isolate and manage plan data according to business dimensions
 - [Feature] Tencent Security Group - Basic Information interface support displaying tag information
 - [Feature] Support configuration of synchronization concurrency
 
 # Upgrade
+
+- [Upgrade] Optimize rolling service recycling quota judgment logic
+- [Upgrade] Improve TCloud ziyan host operations - Unified interaction: details, security group view, power on/off, restart
+- [Upgrade] Resource plan frontend interaction optimization
+- [Upgrade] Rolling service quota execution no longer limits query interval
+- [Upgrade] Optimize host application billing mode and demand quantity
+- [Upgrade] TCloud ziyan cloud host recycling - Only need to preview recyclable hosts under business
+- 
 - [Upgrade] New personnel selector and its display search and form components
 - [Upgrade] Helm Chart adds ETCD's tls config switch, etc.
+
+# Bugfix
+
+- [Bugfix] Fix the timing issue of not being able to query hosts after transferring to other businesses
+- [Bugfix] Host recycling - Pre-check details - Incorrect data display
+- [Bugfix] Host application - Parameter error - Incorrect disk type data
