docs: v1.7.1.3-alpha.1 (merge request !1954)
Squash merge branch 'version-bcc-v1.7.1.3-1226-1' into 'bcc/v1.7.x'
docs: v1.7.1.3-alpha.1


TAPD: --story=121087299

--- a/docs/support-file/changelog/en/v1.7.1_2024-12-10.md
+++ b/docs/support-file/changelog/en/v1.7.1_2024-12-10.md
@@ -24,6 +24,7 @@
 - 
 - [Upgrade] New personnel selector and its display search and form components
 - [Upgrade] Helm Chart adds ETCD's tls config switch, etc.
+- [Upgrade] Host purchase - adjust password verification rules
 
 # Bugfix
 
