docs: v1.7.1.3正式包 (merge request !1956)
Squash merge branch 'version-bcc-v1.7.1.3-1226-2' into 'bcc/v1.7.x'
docs: v1.7.1.3正式包


TAPD: --story=121363588

--- a/docs/support-file/changelog/ch/v1.7.1_2024-12-10.md
+++ b/docs/support-file/changelog/ch/v1.7.1_2024-12-10.md
@@ -23,6 +23,8 @@
 - [优化] 新的人员选择器及其展示搜索与表单组件
 - [优化] Helm Chart增加etcd的tls开关等
 - [优化] 主机购买-调整密码校验正则
+- [优化] 主机回收-预检详情接口-查询全部的问题
+- [优化] 业务下跳转至单据详情需带上业务id参数
 
 # 修复
 
