--- a/docs/support-file/changelog/en/v1.7.1_2024-12-10.md
+++ b/docs/support-file/changelog/en/v1.7.1_2024-12-10.md
@@ -25,6 +25,8 @@
 - [Upgrade] New personnel selector and its display search and form components
 - [Upgrade] Helm Chart adds ETCD's tls config switch, etc.
 - [Upgrade] Host purchase - adjust password verification rules
+- [Upgrade] Host recycling - Pre check details interface - Query all issues
+- [Upgrade] Jumping to document details under business needs to include the business ID parameter
 
 # Bugfix
 
