docs: v1.7.1.4 (merge request !1967)
Squash merge branch 'version' into 'bcc/v1.7.x'
docs: v1.7.1.4 --bug=136447837 资源预测-调整单据- CRP报错重复的资源调整

 



TAPD: --bug=136447837

--- a/docs/support-file/changelog/ch/v1.7.1_2024-12-10.md
+++ b/docs/support-file/changelog/ch/v1.7.1_2024-12-10.md
@@ -31,3 +31,5 @@
 - [修复] 修复主机转移到其他业务出现查询不到主机的时序问题
 - [修复] 主机回收-预检详情-数据显示不正确
 - [修复] 主机申请-参数报错-磁盘类型数据不正确
+- [修复] 资源预测-调整单据报错重复的资源调整
+- [修复] 资源预测-调整操作修改后字段值展示为空
