--- a/docs/support-file/changelog/en/v1.7.1_2024-12-10.md
+++ b/docs/support-file/changelog/en/v1.7.1_2024-12-10.md
@@ -33,3 +33,5 @@
 - [Bugfix] Fix the timing issue of not being able to query hosts after transferring to other businesses
 - [Bugfix] Host recycling - Pre-check details - Incorrect data display
 - [Bugfix] Host application - Parameter error - Incorrect disk type data
+- [Bugfix] Resource Plan - Fix the error of duplicate resource adjustment in adjust ticket
+- [Bugfix] Resource Plan - Fix the issue where field values display as empty after adjust operation modification
