docs: 1.7.2.4 (merge request !2022)
Squash merge branch 'version-bcc-v1.7.2.4-0213-1' into 'bcc/v1.7.x'
docs: 1.7.2.4

TAPD: --story=121884185

--- a/docs/support-file/changelog/ch/v1.7.2_2025-01-08.md
+++ b/docs/support-file/changelog/ch/v1.7.2_2025-01-08.md
@@ -5,10 +5,15 @@
 - [新增] 资源下负载均衡新增同步功能
 - [新增] 增加全局配置表
 - [新增] 账号管理-一级账号录入-新增账号校验接口
+- [新增] 滚服罚金乘以罚金成本比例
+- [新增] 主机申请-机房裁撤-不校验计费模式
+- [新增] 主机申请-下线“春保资源池”类型
 
 # 优化
 - [优化] 调整主机密码校验规则&调整主机关联安全组查询接口
 - [优化] 调整ETCD超时时间，Helm Chart Values 增加ETCD超时时间配置
+- [优化] 主机申请-计费模式未传时明文指定包年包月
+- [优化] 机房裁撤-页面优化
 
 # 修复
 
@@ -17,4 +22,6 @@
 - [修复] 修复AWS镜像同步失败
 - [修复] 修复AWS路由表同步删除失败
 - [修复] 修复负载均衡购买-Describe接口可用区传参问题
-
+- [修复] 修复查询裁撤主机错误问题
+- [修复] 资源预测-调整需确保预测类型一致
+- [修复] 修复识别裁撤主机时忽略掉了物理机的问题
