--- a/docs/support-file/changelog/en/v1.7.2_2025-01-08.md
+++ b/docs/support-file/changelog/en/v1.7.2_2025-01-08.md
@@ -6,12 +6,16 @@
 - [Feature] Added synchronization function for load balancing under resources
 - [Feature] Added global configuration table
 - [Feature] Added account verification API for root account entry in account management
+- [Feature] Roll off penalty multiplied by penalty cost ratio
+- [Feature] Host application for computer room reduction no verification billing mode
+- [Feature] Host application offline "Spring Protection Resource Pool" type
 
 # Upgrade
 
 - [Upgrade] Adjusted host password verification rules & adjusted the query interface for host-associated security groups
 - [Upgrade] Adjusted ETCD timeout time, added ETCD timeout time configuration in Helm Chart Values
-
+- [Upgrade] Host application if the billing mode is not specified, specify the annual or monthly package.
+- [Upgrade] Computer room closure page Optimization
 
 # Bugfix
 
@@ -20,3 +24,6 @@
 - [Bugfix] Fixed AWS image synchronization failure
 - [Bugfix] Fixed AWS route table synchronization deletion failure
 - [Bugfix] Fixed the issue of availability zone parameter transmission in the DescribeResource api of purchasing load balancer
+- [Bugfix] Fix the error of querying and canceling the host
+- [Bugfix] Resource forecast adjustment needs to ensure the same forecast type
+- [Bugfix] Fixed the issue where physical machines were ignored when identifying hosts for removal
