--- a/docs/support-file/changelog/ch/v1.7.3_2025-02-12.md
+++ b/docs/support-file/changelog/ch/v1.7.3_2025-02-12.md
@@ -2,9 +2,12 @@
 
 # 新增
 
+- [新增] 资源预测-资源到期通知
 - [新增] 账号管理-支持多表头
 
 # 优化
+- [优化] 主机回收-预检并发优化
+- [优化] 优化主机初始化流程
 - [优化] 调整账号管理可见范围
 - [优化] 调整Helm Chart模板中ETCD的TLS开关逻辑
 - [优化] 支持ETCD endpoint不可用时快速报错
