--- a/docs/support-file/changelog/en/v1.7.3_2025-02-12.md
+++ b/docs/support-file/changelog/en/v1.7.3_2025-02-12.md
@@ -2,11 +2,13 @@
 
 
 # Features
-
+- [Feature] Resource Plan - Resource expiration notifications
 - [Feature] Account Management - Bill page supports multi-column headers
 
 # Upgrade
 
+- [Upgrade] Host Recycling - Optimize pre-check concurrency
+- [Upgrade] Optimize host initialization process
 - [Upgrade] Adjust visibility scope of account management
 - [Upgrade] Helm Chart optimize ETCD's TLS toggle logic
 - [Upgrade] Support fast failure when ETCD endpoint is unavailable
