docs: v1.7.4.1 - 主机一键申领关联预测 (merge request !2074)
Squash merge branch 'version' into 'bcc/v1.7.x'
docs: v1.7.4.1 - 主机一键申领关联预测

 



TAPD: --story=121498127

--- a/docs/support-file/changelog/ch/v1.7.4_2025-02-26.md
+++ b/docs/support-file/changelog/ch/v1.7.4_2025-02-26.md
@@ -3,6 +3,7 @@
 # 新增
 
 - [新增] 账号管理-支持AWS中国站
+- [新增] 主机库存-一键申领关联预测
 
 # 优化
 - [优化] 服务发现支持标签功能
@@ -11,3 +12,4 @@
 
 - [修复] 华为云ListZone时错误未返回的问题
 - [修复] Helm Chart Deployment 模板中podAnnotations格式错误问题
+- [修复] 修复主机申领和回收在某些场景下会失败的问题
