--- a/docs/support-file/changelog/en/v1.7.4_2025-02-26.md
+++ b/docs/support-file/changelog/en/v1.7.4_2025-02-26.md
@@ -4,6 +4,7 @@
 # Features
 
 - [Feature] Account Management - Supports AWS China site
+- [Feature] Host Inventory - One-click Apply Linked Resource plan
 
 # Upgrade
 
@@ -13,3 +14,4 @@
 
 - [Bugfix] Huawei Cloud ListZone errors were not returned
 - [Bugfix] Fix Helm Chart service template podAnnotations field 
+- [Bugfix] Fix the issue where host apply and recycle may fail in certain situation.
