--- a/docs/support-file/changelog/en/v1.7.4_2025-02-26.md
+++ b/docs/support-file/changelog/en/v1.7.4_2025-02-26.md
@@ -3,6 +3,7 @@
 
 # Features
 
+- [Feature] Rolling Server - Resource expiration notifications
 - [Feature] Account Management - Supports AWS China site
 - [Feature] Host Inventory - One-click Apply Linked Resource plan
 
@@ -12,6 +13,7 @@
 
 # Bugfix
 
+- [Bugfix] Host Apply - Physics machine - Save Requirements button cannot be clicked
 - [Bugfix] Huawei Cloud ListZone errors were not returned
 - [Bugfix] Fix Helm Chart service template podAnnotations field 
 - [Bugfix] Fix the issue where host apply and recycle may fail in certain situation.
