docs: 调整1.7.6版本日志 (merge request !2109)
Squash merge branch 'v1.7.x-merge-clb1' into 'bcc/v1.7.x'
docs: 调整1.7.6版本日志


TAPD: --story=122285714

--- a/docs/support-file/changelog/ch/v1.7.6_2025-03-20.md
+++ b/docs/support-file/changelog/ch/v1.7.6_2025-03-20.md
@@ -4,12 +4,18 @@
 
 - [新增] AWS账单支持指定账单剔除
 - [新增] 账号列表支持按业务搜索
+- [新增] 研发账单拉取接口
 
 # 优化
 - [优化] 账单汇总界面优化
 - [优化] 账单月度任务调度优化
 - [优化] 登记账号详情页面权限优化
+- [优化] 滚服到期提醒应退还日期
+- [优化] 任务管理状态判断逻辑
+- [优化] 主机开关机、重启优化
 
 # 修复
 
 - [修复] 修复部分CLB问题
+- [修复] 滚服主机流转到资源池退回失败
+- [修复] 资源预测可申领时间错误
