--- a/docs/support-file/changelog/en/v1.7.6_2025-03-20.md
+++ b/docs/support-file/changelog/en/v1.7.6_2025-03-20.md
@@ -3,11 +3,17 @@
 # Feature
 - [Feature] AWS billing now supports specified bill exclusion
 - [Feature] Account list supports business-based search
+- [Feature] bill pulling api
 
 # Upgrade
 - [Upgrade] Billing summary interface optimization
 - [Upgrade] Billing - MonthTask scheduling optimization
 - [Upgrade] Registered account details page permission optimization
+- [Upgrade] Optimize the date when rolling service expiration reminders should be refunded
+- [Upgrade] Task management status judgment logic
+- [Upgrade] Optimization of switching off and restarting the host
 
 # Bugfix
 - [Bugfix] Fixed some CLB issues
+- [Bugfix] Failed to transfer server host to resource pool
+- [Bugfix] Error in resource forecast availability time
