docs: version v1.8.5.0 --story=126798610 (merge request !2477)
Squash merge branch 'version/v1.8.5.0-prod' into 'bcc/v1.8.x'
docs: version v1.8.5.0 --story=126798610

 



TAPD: --story=126798610

--- a/docs/support-file/changelog/ch/v1.8.5_2025-08-11.md
+++ b/docs/support-file/changelog/ch/v1.8.5_2025-08-11.md
@@ -7,11 +7,13 @@
 - [新增] CLB-支持单个、批量导出CLB
 - [新增] 证书-证书管理支持标签
 - [新增] CLB、安全组-支持按地域搜索资源
+- [新增] CVM申领允许选择系统盘、数据盘
 
 # 优化
 - [优化] 购买CLB-ipv6类型CLB购买参数优化
 - [优化] CLB-CLB关联资源的操作权限点调整
 - [优化] CLB-监听器规则绑定空目标组时，展示状态优化
+- [优化] 回收预检调度重构，效率提升
 
 # 修复
 - [修复] 负载均衡绑定的安全组-安全组规则列表报无权限
