--- a/docs/support-file/changelog/en/v1.8.5_2025-08-11.md
+++ b/docs/support-file/changelog/en/v1.8.5_2025-08-11.md
@@ -7,11 +7,13 @@
 - [Feature] CLB - Support single and batch export of CLBs
 - [Feature] Certificate - Certificate management supports tags
 - [Feature] CLB, Security Group - Support searching resources by region
+- [Feature] CVM Claim-Allow selection of system disk and data disk
 
 # Upgrade
 - [Upgrade] Purchase CLB - Optimized parameters for IPv6 type CLB purchase
 - [Upgrade] CLB - Adjusted operation permissions for CLB-associated resources
 - [Upgrade] CLB - Improved status display when binding listener rules to empty target groups
+- [Upgrade] Recycling pre-check scheduling refactored for efficiency improvement
 
 # Bugfix
 - [Bugfix] Load Balancer bound Security Group - Fixed permission issue in security group rule list
