docs: v1.8.6 release changelog (#1768)
* docs: v1.8.6 release changelog

* docs: v1.8.6 release version

* docs: v1.8.6 release version

--- a/docs/support-file/changelog/en/v1.8.6_2025-09-10.md
+++ b/docs/support-file/changelog/en/v1.8.6_2025-09-10.md
@@ -9,3 +9,4 @@
 # Upgrade
 - [Upgrade] CLB-Support multiple ports when searching for listeners
 - [Upgrade] After resource allocation, compatible with cases where other resources associated with it are not allocated
+- [Upgrade] CVM Purchase - Display error messages in the order form
